--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "cra-template": "1.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-icons": "^5.4.0",
+    "react-icons": "5.4.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
