--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "cra-template": "1.2.0",
+    "framer-motion": "^11.17.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "5.4.0",
